[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://cool_theme.tres" type="Theme" id=2]
[ext_resource path="res://Medium_UI.tres" type="DynamicFont" id=3]
[ext_resource path="res://Small_UI.tres" type="DynamicFont" id=4]
[ext_resource path="res://TargetButton.gd" type="Script" id=5]
[ext_resource path="res://target_ship.gd" type="Script" id=6]

[sub_resource type="ButtonGroup" id=1]
resource_name = "TargetGroup"

[node name="TargetButton" type="Button"]
margin_right = 811.0
margin_bottom = 296.0
size_flags_vertical = 3
toggle_mode = true
group = SubResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.05
anchor_top = 0.07
anchor_right = 0.95
anchor_bottom = 0.93
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargetPic" type="TextureRect" parent="HBoxContainer"]
margin_right = 240.0
margin_bottom = 254.0
size_flags_horizontal = 3
texture = ExtResource( 1 )
stretch_mode = 4

[node name="TargetName" type="Label" parent="HBoxContainer"]
margin_left = 244.0
margin_right = 484.0
margin_bottom = 254.0
size_flags_horizontal = 3
size_flags_vertical = 5
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "aaa"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 488.0
margin_right = 729.0
margin_bottom = 254.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 241.0
margin_bottom = 29.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Danger:"
align = 1

[node name="DangerBar" type="ProgressBar" parent="HBoxContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 241.0
margin_bottom = 254.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 5.0
value = 1.0
rounded = true
percent_visible = false

[node name="SelectShip" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
text = "Select a target before setting sail!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargetShip" type="Node" parent="."]
script = ExtResource( 6 )

[connection signal="pressed" from="." to="." method="_on_TargetButton_pressed"]
